# StageGuard

./: .gitignore  .zenodo.json  CITATION.cff  README.md  ROADMAP.md  environment.yml  pyproject.toml
configs/: accusleep_demo.yaml  actigraphy.yaml  bioradar.yaml  cardiorespiratory.yaml  mouse_eeg.yaml  sleepaccel_demo.yaml
data/: README.md  sleepaccel_demo.npz
docs/: backbones.md  datasets.md  dependencies.md
examples/: demo.py
notebooks/: demo_stageguard.ipynb
scripts/: build_accusleep_demo.py  smoke_test.py
stageguard/: __init__.py  config.py  decoder.py  losses.py  metrics.py  sqi.py
stageguard/backbones/: accusleep.py
stageguard/data/: actigraphy.py  mouse_eeg.py
tests/: test_backbones.py  test_data.py  test_decoder.py  test_metrics.py  test_sqi.py  test_wrapper.py
